- add unit tests (Junit) - add integration tests (Arquillian) - add README.md